Stage 7: develop Playwright and Appium modules from skeletons
module-web-playwright: forge.* property prefix, opt-in bean (a browser
process never starts in the default offline build), per-test isolated
BrowserContext with configured timeout, PlaywrightPageExtension for
fixture-style Page injection; PlaywrightSmokeIT on a real browser behind
@Tag(browser) + browsersTest task.

module-mobile-appium: build aligned with module conventions, URI-based
hub URL with fail-fast message, AppiumSession (one session = one test,
try-with-resources); wiring example without a device farm. java-client
bumped to 10.x to match the Selenium line pinned by the Boot BOM.